2021-04-10  Bart Schaefer  <schaefer@zsh.org>

	* 47913: Doc/Zsh/options.yo, Src/options.c, Src/pattern.c, Src/zsh.h:
	implement CASE_PATHS option to make NO_CASE_GLOB more sensible

2021-04-10  dana  <dana@dana.is>

	* unposted (see 48415): README: Document incompatibility
	caused by workers/43928

	* 48338: Completion/Unix/Command/_git: Support case-insensitive
	path matching

2021-04-09  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 48432 (plus test change): Src/Modules/zutil.c,
	Test/V05styles.ztst: Fix quoting of zstyle -L output for
	-e styles, and enable test.

2021-04-09  Oliver Kiddle  <opk@zsh.org>

	* 48378: Completion/Zsh/Command/_compadd: complete compadd
	options for other completion functions

	* 48437: Completion/Unix/Command/_gdb: fix pid completion when
	cursor is in the middle of the line

	* Felipe Contreras: 47786: aclocal.m4, aczsh.m4: prepare for
	autoconf 2.70

	* Felipe Contreras: 47785: Src/Modules/files.c, Src/zsh_system.h,
	Src/mem.c, configure.ac: remove deprecated autoconf functions

2021-04-08  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 48416: Completion/Unix/Command/_gcore: support macOS, with
	update for GNU gcore

2021-04-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 48410: Doc/Zsh/metafaq.yo, Etc/FAQ.yo: FAQ, METAFAQ: Mention
	zsh-security@.

	* 48379: Src/subst.c, Test/D04parameter.ztst: Make the parameter
	expansion subscript flags parse error message, "error in flags",
	identify the location of the parse error.

	* 48321 (tweaked per thread): Completion/Unix/Type/_perl_modules:
	Don't assume ${words[1]} to be either "perl" or "perldoc"

2021-04-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 48425: Test/V05styles.ztst: Add an XFail test for a 'zstyle
	-L' escaping bug (workers/48424).

2021-04-06  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 48391: Src/Zle/compresult.c: correctly calculate display string
	width in completion list to fix display problem in menu-complete
